--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
     <img src="./images/profile photo.jpeg" height="270">
     <h1>Shirhan A. Biottong</h1>
     <p>Cellphone: +639976072132<br/>
-        Facebook: <a href="www.facebook.com/shirhanbiottong">Click to view</a><br />
+        Facebook: <a href="https://www.facebook.com/shirhanbiottong">Click to view</a><br />
         Email:<a href="shirhan.biottong@gmail.com">shirhanbiottong@gmail.com</a>
     </p>
 
